# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1421 2015/02/23 12:48:11 mpagano Exp $

*git-sources-4.0_rc1 (23 Feb 2015)

  23 Feb 2015; Mike Pagano <mpagano@gentoo.org> -git-sources-3.19_rc7.ebuild,
  +git-sources-4.0_rc1.ebuild:
  Linux patch 4.0_rc1. Remove old version.

  04 Feb 2015; Mike Pagano <mpagano@gentoo.org> -git-sources-3.19_rc1.ebuild,
  -git-sources-3.19_rc2.ebuild, -git-sources-3.19_rc3.ebuild,
  -git-sources-3.19_rc4.ebuild, -git-sources-3.19_rc5.ebuild,
  -git-sources-3.19_rc6.ebuild, git-sources-3.19_rc7.ebuild:
  Fix patch version dependency. Drop old

*git-sources-3.19_rc7 (02 Feb 2015)

  02 Feb 2015; Mike Pagano <mpagano@gentoo.org> +git-sources-3.19_rc7.ebuild:
  Version bump

  26 Jan 2015; Mike Pagano <mpagano@gentoo.org> git-sources-3.19_rc1.ebuild,
  git-sources-3.19_rc2.ebuild, git-sources-3.19_rc3.ebuild,
  git-sources-3.19_rc4.ebuild, git-sources-3.19_rc5.ebuild,
  git-sources-3.19_rc6.ebuild:
  Limit patch version to <2.7.3. See bug #537852 

*git-sources-3.19_rc6 (26 Jan 2015)

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.19_rc6.ebuild:
  Automated version bump to 3.19_rc6

*git-sources-3.19_rc5 (18 Jan 2015)

  18 Jan 2015; Mike Pagano <mpagano@gentoo.org> +git-sources-3.19_rc5.ebuild:
  Version bump

*git-sources-3.19_rc4 (11 Jan 2015)

  11 Jan 2015; Michael Pagano <mpagano@gentoo.org>
  +git-sources-3.19_rc4.ebuild:
  Version bump

*git-sources-3.19_rc3 (06 Jan 2015)

  06 Jan 2015; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.19_rc3.ebuild:
  Automated version bump to 3.19_rc3

*git-sources-3.19_rc2 (29 Dec 2014)

  29 Dec 2014; Michael Pagano <mpagano@gentoo.org>
  +git-sources-3.19_rc2.ebuild:
  Manual version bump.

  21 Dec 2014; Michael Pagano <mpagano@gentoo.org>
  -git-sources-3.18_rc7.ebuild:
  Remove old. Non-automated manual.

*git-sources-3.19_rc1 (21 Dec 2014)