@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile install postinst postrm preinst setup test unpack
+DEPEND=>=sys-devel/patch-2.7.4 !build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 )
+DESCRIPTION=The very latest -git version of the Linux kernel
+EAPI=5
+HOMEPAGE=http://www.kernel.org
+IUSE=symlink build
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=GPL-2 freedist
+PDEPEND=!build? ( virtual/dev-manager )
+RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
+RESTRICT=binchecks strip
+SLOT=4.0_rc2
+SRC_URI=mirror://kernel/linux/kernel/v4.x/testing/patch-4.0-rc2.xz mirror://kernel/linux/kernel/v4.x/linux-3.19.tar.xz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	kernel-2	1616028b220da4e6b0c6d5330390602c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=f60fcd9930521fbe75f68a98504ea1e5
