@@ -3,13 +3,15 @@ Hash: SHA256
 
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
 DIST patch-4.0-rc1.xz 4892656 SHA256 1aa6b583fc03bc4142a9e4731d0ae3b8d090a468e2f26d46137fd4ec7f8c1714 SHA512 ea873f3c3f79b15986726f24445746f05ae2c7f89b47287c7cf8cf55f72a9e1071f3eacaa5ef3f4e06a424069c65baf559a161a33cb2978f82e1a8f39b56479e WHIRLPOOL c443f4c938badd30338dbe7376dd15acfb89a1b04c16097ef5b7f6d165d3f30bde4ade4d6bd2241074e834cfa1747041aeb3bc4893effcea2c14bd04aab21709
+DIST patch-4.0-rc2.xz 4915296 SHA256 d5a9e27e98b0771f6d082d5d323eecc0094ecc84d6f181c5de3f1c02498caa51 SHA512 f2d8e8b5a2890009d22fc203f701b0be9f58ee72e1c17d4d9501bd2dc650947ec039af6588eaab5683a839fcca8371b64d4f98a73dcf6b8133d5b2a12da077b8 WHIRLPOOL 141d76a56d3311a7d0b7d1e191f5d0fb15ad830697e9a1650b805cf1e45bae6c9be2ae5a6215391c008f76a8f615c512597b2db7890516c28f7971541bc3491b
 EBUILD git-sources-4.0_rc1.ebuild 1263 SHA256 a9fc49603f903337e0f10da2a6977e80d3ca5a582ba7dd1c63fd2378b377cfb4 SHA512 9554205625076ecc3558ef851cd582e308d002ef5ff4cd82efcbc32a4b3c1146502e0f2c860e5c2f8878f1fa71dee9e6fc876a22e6bb0bf498e8c92733ac9b26 WHIRLPOOL 76affcce250a3bce97867721fd46ac955454801253564e0635aa46f32a0cc6c00b87e0f2eeee2806d9611b5772c35c7b1758ef769ce5b69135de3ad2ce32224b
-MISC ChangeLog 46400 SHA256 3b0e786c56c6509421a2423458fe750a4a028674d1eb29ed2eec06ce3c4b3322 SHA512 16cd02eb8ab62638186e021976cbf052e1f090ae786770bfb913923eee2e1438f937face5a46838beeb318f755d5830a94dcb221f86ccb55c82bded0064c3842 WHIRLPOOL a32ee0694d34fd4261601eb96603a860cfa2a65fef7e4ade3de9d43acff69b08619c693f5740a1bc1505598125b59d534d168ba32d978e58603848eb58df09e7
+EBUILD git-sources-4.0_rc2.ebuild 1263 SHA256 b90b2857bd0d069c19d9f122884e256f4c66e080e798e96076f5fab417efdd25 SHA512 a792e9de543bdf2bfbd90e0de15366a1bab6f01ea2430d2c1e3515143e980615ccd01a0dbefd83f27ca0d8a90b1d08e83c8ed59730079015b9a73af5bc9141a8 WHIRLPOOL 10e87f837a4e34b54845d16fa3fb4ad1fb2ea6b485f1c1bdfd505d01207b0afa8a47fd457011ff580b180ba750219ec1b305b1cc3cca0f3608c1f032a052b193
+MISC ChangeLog 46529 SHA256 7c14b8e1b6a18ef0e178ad8546e9b74cbd1661e4ab3fb267e9ef30152d7a8590 SHA512 3fb227aa872db1759b83a7cb409a50e27651c4e4e21a37e6d30e613a06a0f0b6e07fd9010cec4a95fb6be99a92ab2863029f262d1dc11c64ae98789718c48cbd WHIRLPOOL 371df213056d89039e9d9574c73f0a2aa47b252c9dd46f9cf80e34a0b890199ce199a9bb1b3307a17d01f406fde9efaecfde5504cc94f09378d3d3935e14d69a
 MISC metadata.xml 533 SHA256 85e5cf7dda5967132711e350d6b4194f7e2c5bece3732ce74d912c28f0afb3bc SHA512 561f9e4a87bc3518664912bf9e3dd6d83366a154038e3c2a901d8275a2b3a40e711e47ea555eacbed816cea36a174ffe2a7f63895ca006491f4e1efec5f7a27e WHIRLPOOL d4dfacd52a04d2737b3abb2a7d4f6772980a97759dae6fa80bef1863b356902612a0702cd9894148145f122771bfb977c48c086cc2ebc67ea07300c64b7d7313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTrIZYACgkQPDPGULV25ONWGwCgiw87g3rJ8q8Jras0zFks4FdI
-W30AoJmeo1lk+dTwwortqILzoWAUoi+h
-=BAVe
+iEYEAREIAAYFAlT2GZ8ACgkQPDPGULV25OPwvwCdEUVeuBSFFGa7xQgcW2wJxP8a
+F20AoJ9I3DmcQhm4svXFoFkbalmBhb2S
+=IbyU
 -----END PGP SIGNATURE-----
